tests/expectations/compiler/finalize/finalize_reassign_to_outer_scope_fail.out
Error [ETYC0372109]: Cannot re-assign to `try_get_token` from a conditional scope to an outer scope in a final fn.
    --> compiler-test:14:9
     |
  14 |     let try_get_token: TokenInfo = Mapping::get_or_use(
     |         ^^^^^^^^^^^^^
     |
     = This is a fundamental restriction that can often be avoided by using a ternary operator `?` or re-declaring the variable in the current scope. In the future, ARC XXXX (https://github.com/ProvableHQ/ARCs) will support more complex assignments in final fns.
